  - Add support for connecting with T2 chip
  - Various memory leak, deadlock and invalid free fixes
  - Show actual libusb version in debug message on startup
  - Enable libusb debugging output
  - Log client process name alongside pid if possible on Linux
  - Unify and improve log message output
  - Improve README.md with project description, installation, contributing and
    usage sections

Version 1.1.0
~~~~~~~~~~~~~

* Changes:
  - Check for pkg-config availability in autogen.sh
  - Fix missing "usbmuxd-proto.h" in released tarbal
  - Fix typo which broke udev support in rule for udev activation mode
  - Fix broken configure summary on OS X and change activation method
    to "manual"
  - Compile bits of udev and systemd support only if needed
  - Bump autoconf requirement to 2.64

Version 1.0.9
~~~~~~~~~~~~~

* Changes:
  - Fix broken handling of "--user" argument value
  - Add new "--enable-exit" argument to enable handling of "--exit" requests
  - Add new "--disable-hotplug" argument to disable automatic device discovery
  - Add new "--systemd" argument to startup with right settings for systemd
  - Add man page for usbmuxd
  - Update copyright headers to match best practice
  - Flush input buffer on connection teardown
  - Add systemd based activation with fallback for udev and manual activation
  - Add initial NEWS file and update README with latest information
  - Rename header guards according to C++ standard
  - Implement support for usbmux protocol version 2 which improves stability
  - Fix crash when old libusbmuxd was used as a client
  - Add "--version" argument to print version number and exit
  - Update command line usage to match best practice and other tools
  - Massively improve read performance by using 3 parallel transfers
  - Bump requirement to libplist 1.11
  - Remove trailing "\n" from usbmuxd_log() messages
  - Improve thread safety
  - Fix crash on 64bit systems in process_send()
  - Fix possible leak of file descriptors