@@ -32,9 +32,6 @@ Ensure proper permissions are setup for the daemon to access the directory.
 .B \-U, \-\-user USER
 Change to this user after startup (needs USB privileges).
 .TP
-.B \-f, \-\-foreground
-Do not daemonize (implies one -v).
-.TP
 .B \-n, \-\-disable-hotplug
 Disables automatic discovery of devices on hotplug. Starting another instance
 will trigger discovery instead.
